# dlwpt-code

./: .dockerignore  Untitled.ipynb  generate_annotations_with_malignancy.ipynb  p2_ch10_exercises.ipynb  p2_ch10_explore_dataset_code.ipynb  p2_run_everything.ipynb  p2ch12_explore_data.ipynb  pyproject.toml  requirements.txt
p1ch4/: 1_image_dog.ipynb  2_volumetric_ct.ipynb  3_tabular_wine.ipynb  4_time_series_bikes.ipynb  5_text_jane_austen.ipynb
p1ch5/: 1_parameter_estimation.ipynb  2_autograd.ipynb  3_optimizers-Copy1.ipynb  4_grad_play.ipynb  Untitled.ipynb
p1ch5/.ipynb_checkpoints/: 3_optimizers-Copy1-checkpoint.ipynb
p1ch6/: 1_neural_networks.ipynb  2_activation_functions.ipynb  3_nn_module_subclassing.ipynb
p1ch7/: 1_datasets.ipynb  2_birds_airplanes.ipynb
p1ch8/: 1_convolution.ipynb
p2ch10/: dsets.py
p2ch11/: Dockerfile  dsets.py  training.py
p2ch11/disk_cache_play/: disk_cache_play.py  read_script.py
p2ch12/: 1_final_metric_f1_score.ipynb
